--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "repository": "",
   "license": "Proprietary",
   "private": false,
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "body-parser": "^1.5.2",
     "chai": "^1.9.0",
@@ -19,5 +18,9 @@
     "mongodb": "1.4.34",
     "mongoose": "3.8.24",
     "nodemon": "^1.2.1"
+  },
+  "devDependencies": {
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10"
   }
 }
