(feature) Add ideaModel.js file with Mongoose Schema and Model definition for Idea document.
- Fix singleRun property in karma.conf.js to be set to 'true' for deployment
- Update _.jshintrc and _.gitignore filenames to remove _ prefix

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,24 +1,21 @@
 {
-  "bitwise": false,
-  "camelcase": false,
-  "eqeqeq": true,
-  "es3": false,
-  "forin": false,
-  "freeze": false,
-  "noempty": false,
-  "nonew": true,
-  "plusplus": false,
-  "strict": false,
-  "laxbreak": true,
-  "multistr": true,
-  "eqnull": true,
-  "expr": true,
-  "asi": true,
-  "immed": false,
-  "latedef": false,
-  "newcap": false,
-  "noarg": false,
-  "trailing": false,
-  "loopfunc": true,
-  "smarttabs": true
+    "node": true,
+    "esnext": true,
+    "bitwise": true,
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "immed": true,
+    "indent": 2,
+    "latedef": true,
+    "newcap": true,
+    "noarg": true,
+    "quotmark": "single",
+    "regexp": true,
+    "undef": true,
+    "unused": true,
+    "strict": true,
+    "trailing": true,
+    "smarttabs": true,
+    "white": true
 }
