--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ dist/
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
-node_modules/
-bower_components/
+# node_modules/
+# bower_components/
