--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^1.17.1",
     "mongodb": "1.4.34",
     "mongoose": "3.8.24",
+    "morgan": "^1.5.2",
     "nodemon": "^1.2.1",
     "q": "^1.2.0",
     "supertest": "^0.15.0"
