--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ coverage
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
 client/dist
+client/styles/styles.min.css
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
