(fix) Update Gruntfile to reflect new client file structure

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-client/dist
+client/dist/
 client/styles/styles.min.css
 
 # Dependency directorys
