(feature) Implement upvote and downvote functionality on the backend
- Update frontend HTTP requests for upvote and downvote to match format expected by backend
- Use MongoDB $inc() function to safely update value on Model
- Write unit test cases for testing upvote and downvote functionality on the backend

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "repository": "",
   "license": "Proprietary",
   "private": false,
-  "scripts": {},
+  "scripts": {
+    "test": "npm run test-server",
+    "test-server": "mocha ./server/spec/serverSpec.js"
+    },
   "dependencies": {
     "body-parser": "^1.5.2",
     "chai": "^1.9.0",
